traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:0: error: not found: value j
class TraversalByColumn extends SimpleBuggle {override def run() {var x:Int=0; var y:Int=0; x=getWorldWidth(); y=getWorldHeight(); var count:Int=0; for (i<-1 to x) {for (j<-1 to y) writeMessage(count); setPos(i,j); count=count+1}
                                                                                                                                                                                                                   ^